# RAG_Project

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: chat_router.py
app/schemas/: chat_schemas.py
app/services/answer_query/: get_answers.py
app/services/documents/: load_document.py
app/services/vectorstore/: __init__.py  qdrant_vector_store.py  upload_document.py
app/utils/: config.py  exceptions.py
tests/: test_endpoints.py
