[project]
name = "sds-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camelot-py>=1.0.9",
    "fastapi>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-qdrant>=0.2.0",
    "pdfplumber>=0.11.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
